samples/_failures_safe/1761406996_8d6732_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a1f4a33d.c: In function ‘tokenize’:
./samples/SAFE/__tmp_a1f4a33d.c:173:13: error: expected expression at end of input
  173 |             tokens[token_count++] =
      |             ^~~~~~
./samples/SAFE/__tmp_a1f4a33d.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a1f4a33d.c:173:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a1f4a33d.c:173:13: error: expected declaration or statement at end of input
